--- a/src/main/resources/assets/faitems/lang/zh_cn.lang
+++ b/src/main/resources/assets/faitems/lang/zh_cn.lang
@@ -1,3 +1,4 @@
 item.faitems:cell_breeder.name=增值燃料棒 (%s)
+item.faitems:fuel_cell.name=燃料棒 (%s)
 item.faitems:cell_depleted.name=枯竭燃料棒 (%s)
 item.faitems:empty_cell.name=燃料棒 (空)
